tests/neg/i15575.check
-- [E057] Type Mismatch Error: tests/neg/i15575.scala:5:27 -------------------------------------------------------------
5 |  def bar[T]: Unit = foo[T & Any] // error
  |                           ^
  |                           Type argument T & Any does not conform to lower bound Any
  |---------------------------------------------------------------------------------------------------------------------
  | Explanation (enabled by `-explain`)
  |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
  | I tried to show that
  |   Any
  | conforms to
  |   T & Any
  | but none of the attempts shown below succeeded:
  |
  |   ==> Any  <:  T & Any
  |     ==> Any  <:  T  = false
  |
  | The tests were made under the empty constraint
   ---------------------------------------------------------------------------------------------------------------------
-- [E057] Type Mismatch Error: tests/neg/i15575.scala:9:14 -------------------------------------------------------------
9 |  val _ = foo[String]  // error
  |              ^
  |              Type argument String does not conform to lower bound CharSequence
  |---------------------------------------------------------------------------------------------------------------------
  | Explanation (enabled by `-explain`)
  |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
  | I tried to show that
  |   CharSequence
  | conforms to
  |   String
  | but none of the attempts shown below succeeded:
  |
  |   ==> CharSequence  <:  String  = false
  |
  | The tests were made under the empty constraint
   ---------------------------------------------------------------------------------------------------------------------
